--- a/index.html
+++ b/index.html
@@ -725,9 +725,22 @@
         Copyright galileo
     </p>
 </footer>
+<div class="popups">
+    <div class="popup__book-a-ticket" id="book-a-ticket">
+
+
+    </div>
+
+
+
+
+</div>
 
 <script src="./assets/js/libs/jQuery_v3.7.1/jQuery_v3.7.1.js"></script>
 <script src="./assets/js/libs/owl-carousel/owl.carousel.min.js"></script>
+<script src="./assets/js/src/FormValidator.js"></script>
+<script src="./assets/js/src/Popup.js"></script>
+<script src="./assets/js/src/PopupWithForm.js"></script>
 <script src="./assets/js/index.js"></script>
 </body>
 </html>
