--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <link rel="stylesheet" href="./assets/js/libs/owl-carousel/owl.carousel.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body class=""> <!--//overflow-hidden -->
-<!--<div class="preloader">-->
-<!--    <div class="preloader__row">-->
-<!--        <img class="preloader__item" src="./assets/img/header/logo-wheel-1.svg"-->
-<!--             decoding="async"-->
-<!--             alt="wheel-black">-->
-<!--        <img class="preloader__item" src="./assets/img/header/logo-wheel-2.svg"-->
-<!--             decoding="async"-->
-<!--             alt="wheel-red">-->
-<!--    </div>-->
-<!--</div>-->
+<body class="overflow-hidden"> <!--//overflow-hidden -->
+<div class="preloader">
+    <div class="preloader__row">
+        <img class="preloader__item" src="./assets/img/header/logo-wheel-1.svg"
+             decoding="async"
+             alt="wheel-black">
+        <img class="preloader__item" src="./assets/img/header/logo-wheel-2.svg"
+             decoding="async"
+             alt="wheel-red">
+    </div>
+</div>
 <header class="header sticky" id="myHeader">
     <div class="container">
         <div class="header__right-wrapper">
@@ -411,7 +411,8 @@
                                 про
                                 специальное предложение для группового посещения
                             </p>
-                            <button class="price__special-btn button button-yellow"><b>Забронировать для группы</b>
+                            <button class="price__special-btn button button-yellow js-bookTicket"><b>Забронировать для
+                                группы</b>
                             </button>
                         </div>
                     </div>
@@ -432,7 +433,7 @@
             </div>
             <div class="price__buttons">
                 <button class="button">Купить билет</button>
-                <button class="button button-yellow"><b>Забронировать</b></button>
+                <button class="button button-yellow js-bookTicket"><b>Забронировать</b></button>
 
             </div>
         </div>
@@ -632,7 +633,7 @@
                 <div class="footer__socials">
                     <ul class="footer__icons-list">
                         <li class="footer__icons-item">
-                          <a href="#" target="_blank">
+                            <a href="#" target="_blank">
                                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="40" height="40"
                                      viewBox="0 0 48 48">
                                     <path fill="#1976d2" d="M24 4A20 20 0 1 0 24 44A20 20 0 1 0 24 4Z"></path>
@@ -642,7 +643,7 @@
                             </a>
                         </li>
                         <li class="footer__icons-item">
-                          <a href="#" target="_blank">
+                            <a href="#" target="_blank">
                                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="40" height="40"
                                      viewBox="0 0 48 48">
                                     <path fill="#304ffe"
@@ -692,7 +693,7 @@
                             </a>
                         </li>
                         <li class="footer__icons-item">
-                          <a href="#" target="_blank">
+                            <a href="#" target="_blank">
                                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="40" height="40"
                                      viewBox="0 0 48 48">
                                     <path fill="#FF3D00"
@@ -702,7 +703,7 @@
                             </a>
                         </li>
                         <li class="footer__icons-item">
-                          <a href="#" target="_blank">
+                            <a href="#" target="_blank">
                                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="40" height="40"
                                      viewBox="0 0 48 48">
                                     <path fill="#29b6f6" d="M24 4A20 20 0 1 0 24 44A20 20 0 1 0 24 4Z"></path>
@@ -726,21 +727,79 @@
     </p>
 </footer>
 <div class="popups">
-    <div class="popup__book-a-ticket" id="book-a-ticket">
 
+    <div class="popup popup_type_book-a-ticket">
+        <div class="popup__container">
+            <button type="button" aria-label="Закрыть" class="popup__close-btn popup__close-btn_type_place"></button>
+            <h2 class="popup__title">Бронирование билета</h2>
+            <p class="popup__text popup__text-type-subtitle">Текстовый блок после бронирования билета</p>
+            <form name="book-a-ticket" method="post" class="popup__form popup__form_type_place" novalidate>
+                <div class="popup__content popup__content-clientData">
+                    <p class="popup__text popup__content-text">Ваши контактные данные:</p>
+                    <input name="name" type="text" placeholder="Ваше имя"
+                           class="popup__input-text popup__input-text_type_name" required minlength="2" maxlength="30">
+                    <span class="popup__error popup__error_name">1</span>
+                    <input name="email" type="url" placeholder="Почта"
+                           class="popup__input-text popup__input-text_type_email" required>
+                    <span class="popup__error popup__error_email">1</span>
+                    <input name="tel" type="text" placeholder="Телефон"
+                           class="popup__input-text popup__input-text_type_tel" required minlength="2" maxlength="30">
+                    <span class="popup__error popup__error_tel">1</span>
+                </div>
+                <div class="popup__content popup__content-eventData">
+                    <p class="popup__text popup__content-text">Информация о мероприятии:</p>
+                    <button class="popup__calendar js-calendar">Дата</button>
+                    <div class="popup__choose-wrapper">
+                        <p class="popup__text popup__content-text">Взрослый билет</p>
+                        <div class="popup__counter">
+                            <button type="button" class="popup__button-type-choose">-</button>
+                            <p class="popup__choose-counter popup__choose-counter-type-adult">0</p>
+                            <button type="button" class="popup__button-type-choose">+</button>
+                        </div>
+                    </div>
+                    <div class="popup__choose-wrapper">
+                        <p class="popup__text popup__content-text">Детский билет</p>
+                        <div class="popup__counter">
+                            <button type="button" class="popup__button-type-choose">-</button>
+                            <p class="popup__choose-counter popup__choose-counter-type-child">0</p>
+                            <button type="button" class="popup__button-type-choose">+</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="popup__content popup__content-presentData">
+                    <div class="popup__content">
+                        <p class="popup__text popup__content-text">Новогодний подарок:</p>
+                        <p class="popup__text">В подарок входит сундучок с конфетами и настольный набор «Механик»</p>
+                    </div>
+                    <div class="popup__choose-wrapper">
+                        <p class="popup__text popup__content-text"><span class="red-color-text">Новогодний подарок</span></p>
+                        <div class="popup__counter">
+                            <button type="button" class="popup__button-type-choose">-</button>
+                            <p class="popup__choose-counter popup__choose-counter-type-child">0</p>
+                            <button type="button" class="popup__button-type-choose">+</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="popup__content-footer">
+                    <p class="popup__agree">Согласен с политикой обработки персональных данных</p>
+                    <button type="submit" class="popup__submit-btn popup__submit-btn_type_place">Создать</button>
+                </div>
+                <input name="adultTicket" type="hidden" placeholder="Взрослый билет" value="0">
+                <input name="childTicket" type="hidden" placeholder="Детский билет" value="0">
+                <input name="present" type="hidden" placeholder="Подарок" value="0">
 
+            </form>
+        </div>
     </div>
-
-
 
 
 </div>
 
 <script src="./assets/js/libs/jQuery_v3.7.1/jQuery_v3.7.1.js"></script>
 <script src="./assets/js/libs/owl-carousel/owl.carousel.min.js"></script>
-<script src="./assets/js/src/FormValidator.js"></script>
-<script src="./assets/js/src/Popup.js"></script>
-<script src="./assets/js/src/PopupWithForm.js"></script>
-<script src="./assets/js/index.js"></script>
+<script type="module" src="./assets/js/src/FormValidator.js"></script>
+<script type="module" src="./assets/js/src/Popup.js"></script>
+<script type="module" src="./assets/js/src/PopupWithForm.js"></script>
+<script type="module" src="./assets/js/index.js"></script>
 </body>
 </html>
